--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">helloAndroid</string>
+    <string name="app_name">HelloAndroid</string>
     <string name="moeyuuko">Moeyuuko</string>
 </resources>
