主页加入横屏布局
优化布局

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">HelloAndroid</string>
     <string name="moeyuuko">Moeyuuko</string>
+    <string name="back">返回</string>
 </resources>
